Increase z-index of status line. Fixes #134.

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -250,6 +250,7 @@ body, pre {
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 3;
 
   @include info-panel;
 
